# kubolti

./: .gitignore  AGENTS.md  CHANGELOG.md  COMPLETE_PLAN.md  ISSUES_ENHANCEMENTS.md  README.md  dem2dsf_xp12_spec_v0_2.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: README.md  REFERENCES.md  backend_contract.md  build_config.md  compatibility.md  dem_stack.md  gui.md  meshtool_apology.md  migrations.md  output_layout.md  overlay_plugins.md  patch_workflow.md  perf_benchmarking.md  pinned_versions.md  presets.md  release_notes.md  release_signing.md  sample_pipelines.md  security_posture.md  tool_paths.template.json  tool_urls.json
docs/DSFTool/: 01_what_dsftool_is_and_isnt.md  02_getting_dsftool_binaries.md  03_building_xptools_from_source.md  04_dsftool_cli_reference.md  05_dsf2text_text_format_reference.md  06_raster_layers_and_raw_files.md  07_7z_compressed_dsfs.md  08_merging_dsfs.md  09_troubleshooting_and_gotchas.md  10_design_notes_for_dsftool_based_generators.md  11_dsf_architecture_notes.md  99_sources_and_further_reading.md  README.md
docs/Ortho4XP/: 01_mental_model.md  02_pipeline_and_artifacts.md  03_folder_layout_and_conventions.md  04_configuration_surface_area.md  05_custom_dem_and_refinement.md  06_overlays_and_scenery_order.md  07_xp12_compat_rasters_water.md  README.md  (+3 more)
perf_baselines/: ci_baseline.json
scripts/: benchmark_normalize.py  benchmark_publish.py  build_gui.py  build_release.py  build_xptools.py  bundle_diagnostics.py  fetch_references.py  fetch_tool_urls.py  gui_smoke.py  install_dev.py  install_tools.py  ortho4xp_runner.py  profile_build.py  run_ci_perf.py  sign_release.py
tests/: __init__.py  conftest.py  test_adapter.py  test_aoi.py  test_aoi_mask.py  test_autoortho.py  test_backend_registry.py  test_build.py  test_build_config.py  test_build_gui_script.py  test_build_helpers.py  test_build_xptools_script.py  test_bundle_diagnostics_script.py  test_ci_perf_script.py  test_clean.py  test_cli.py  test_cli_main.py  test_contracts.py  test_crs.py  test_dem_info.py  test_dem_stack.py  test_density.py  test_doctor.py  test_dsf_validation.py  test_dsftool.py  test_e2e_cli.py  test_fill.py  test_gui.py  test_gui_smoke_script.py  test_install_tools_script.py  test_installer.py  test_integration_external_tools.py  test_logging_utils.py  test_mosaic.py  test_normalization_cache.py  test_ortho4xp_backend.py  test_ortho4xp_runner_script.py  test_ortho4xp_tools.py  test_overlay.py  test_patch.py  (+19 more)
(+93 files in other folders)
